modified main handlebars and scss a bit.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/alex-B-Ly/Rutgers-flyers.git"
   },
-  "author": "Alex, Matt, Raj",
+  "author": "Alex, Matt, Raj, Hannibal",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alex-B-Ly/Rutgers-flyers/issues"
