--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "An app used to check out places around Rutgers University",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
