--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
   },
   "homepage": "https://github.com/alex-B-Ly/Rutgers-flyers#readme",
   "dependencies": {
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "express-handlebars": "^3.0.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "express-handlebars": "^3.0.0"
   }
 }
