Added jawsdb credentials to .env file.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-JAWSDB_URL="mysql://root:@localhost:3306/rutgersflyers_db"
+JAWSDB_URL="mysql://vi7426ncsfvjxzzt:sn8lrkrq6r6uxxxh:@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/ax8qchyyevcwkrk3"
